crates/plotnik-tests/tests/04-emit/bytecode/binding/field_not_on_node_with_suggestion.txt
Q = (function_declaration
  parameter: (formal_parameters) @params
) @fn
------------------ DIAGNOSTICS -------------------
error: `parameter` is not a grammar field of `function_declaration`
 --> query.ptk:2:3
  |
1 | Q = (function_declaration
  |      -------------------- `function_declaration` starts here
2 |   parameter: (formal_parameters) @params
  |   ^^^^^^^^^
  |
help: replace with `parameters`
  |
2 |   parameters: (formal_parameters) @params
  |            +
help: valid grammar fields for `function_declaration`: `body`, `name`, `parameters`
